[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navtilvs"
version = "0.1.0"
description = "NAVTILVS: NAVier-Stokes Two-dimensional IncompressibLe Visual Solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
